# nethermind

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitmodules.swp  .travis.yml  AGENTS.md  BLOCK16_DEBUG.md  BUILD-XDC.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  Dockerfile.alpine  Dockerfile.arm32  Dockerfile.arm64  Dockerfile.chiseled  Dockerfile.debug  Dockerfile.dev  Dockerfile.diag  Dockerfile.e2e  Dockerfile.gmp  Dockerfile.launcher  Dockerfile.lttng-coreclr  Dockerfile.multichain  Dockerfile.pgo  Dockerfile.pgo-sampling  Dockerfile.repro  Dockerfile.rocksdb  Dockerfile.rotki  Dockerfile.secp256k1  Dockerfile.stateRunner  Dockerfile.xdc  DockerfileSE  Dockerfile_alpine  (+77 more)
.agents/references/: evm.md  network.md  rpc.md  state.md  trie.md
.agents/rules/: agent-skills.md  coding-style.md  di-patterns.md  domain-types.md  git.md  github-workflows.md  package-management.md  performance.md  robustness.md  test-infrastructure.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/hooks/: format-check.sh  format-cs.sh
.claude/rules/: CONTRIBUTING.md  before-you-code.md  blockchain.md  coding-style.md  common-review-feedback.md  concurrency.md  di-patterns.md  github-workflows.md  init.md  network.md  package-management.md  performance.md  robustness.md  serialization.md  specs.md  src-nethermind-index.md  state.md  test-infrastructure.md  txpool.md
.claude/skills/: council-review  eip-implementation-reviewer  eip-implementer  eip-reviewer  fix-nethtest  fork-creator  format-check  format-fix  gas-benchmark  resource-leak-audit  review
.config/: dotnet-tools.json
.githooks/: pre-commit
.github/: CODEOWNERS  claude.md  copilot-instructions.md  pull_request_template.md  test-selection.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: CSharpExpert.agent.md
.github/configs/: assertoor-template.yaml  assertoor-template.yml
.github/problem-matchers/: dotnet-format.json
.github/tests/: assertor.yaml
.github/workflows/: No-spacing-issues-check.yml  _code-quality.yml  _scheduled-updates.yml  _security-scans.yml  _taiko-integration.yml  alert-on-issue-open-event.yml  bls.yml  (+168 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.tmp-gb-pr/: diag-entrypoint.sh  run.sh
.tx/: config
Amsterdam/: AmsterdamFixturePathAttribute.cs  AmsterdamTestFixture.cs  Constants.cs  EthereumTests.cs  Tests.cs  TransitionTests.cs
amphora/: neth-lighthouse  neth-lighthouse-m3.md  neth-lighthouse.md  neth-lodestar-m3.md  neth-lodestar.md  neth-nimbus.md  neth-prysm.md  neth-teku-m3  neth-teku-m3.md  neth-teku.md
arm/: README.md  net2v2-arm32v7  net3v0-arm64v8  rocksdb
benchmarking/: benchmark.sh  commits.list  repeat.sh
cortex-extra/: .gitignore  Convert-Configuration.ps1  build.ps1
dev/: README.md
docs/: AI_AGENT_PERFORMANCE_GUIDE.md  ConsensusSszTypes.cs  ExecutionSszTypes.cs  Makefile  make.bat  reproducible-benchmark-workflow.md  self-bal-design.md  ssz-net-types.md
nix/: nuget-deps.json  package.nix  smoke.nix
scripts/: 1804dotnet.sh  bench-evm-memory.sh  build-blockprofiler-dropin.sh  build.sh  build_ndm_plugin.zsh  bump-version.sh  clique-validators.sh  copy-superchain.sh  copy.sh  cspell.sh  dev-setup.sh  diag-entrypoint.sh  docker-publish.sh  docker-rotki-entrypoint.py  dotnet-format.sh  dottrace-report.sh  e2e-build-docker.sh  entrypoint.sh  entrypoint2.sh  evm.sh  evm_benchmark_utils.py  execution.sh  hive-results.sh  infra.sh  known-failing-hive-tests.txt  known-failing-zkevm-tests.txt  known-flaky-hive-tests.txt  monitor-utilization.sh  nethermind.service  preview-retrospective-images.sh  pullandbuild.sh  readtrace-report.sh  run.sh  superchain.py  superchainConverter.py  superchainDownload.py  superchainLister.py  sync-settings.py  sync-skills.ps1  sync-skills.sh  (+9 more)
src/: 1.http  Directory.Build.props  Dockerfile  Dockerfile.globalization  README.md  clean.ps1  jwt.hex  nuget.config
src/Nethermind/Nethermind.Evm/Binaries/rust/: Cargo.toml  build.bat  build.sh
src/Nethermind/Nethermind.Evm/Binaries/rust/src/: lib.rs
tools/: Directory.Build.props  Dockerfile.Kute  nuget.config  tests.props
tools/EthProofValidator/native-zk-verifier/: .gitignore  Cargo.toml  rust-toolchain.toml
tools/EthProofValidator/native-zk-verifier/src/: lib.rs
tools/EthProofValidator/native-zk-verifier/src/verifiers/: airbender.rs  mod.rs  openvm.rs  pico.rs  sp1_hypercube.rs  zisk.rs
tools/lean-ffi/: Cargo.toml  README.md  mock-cl.py
tools/lean-ffi/src/: lib.rs
(+32538 files in other folders)
