# SPDX-FileCopyrightText: 2026 Demerzel Solutions Limited
# SPDX-License-Identifier: LGPL-3.0-only
#
# Placeholder Lean Ethereum FFI shim for EIP-8288. Exposes a C ABI matching
# Nethermind's ILeanProofVerifier so the whole native-binding pipeline can be
# exercised on a live node. The verification logic is a deterministic
# placeholder (NOT cryptography); swap the `verify` module for real leanVM /
# leanSig calls without changing the C ABI or the C# consumer.
[package]
name = "nethermind-lean"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "nethermind_lean"
crate-type = ["cdylib"]

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }

[profile.release]
opt-level = 3
