[package]
name = "secp256r1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3         # Maximum optimizations for performance
lto = "fat"           # Link Time Optimization (helps with inlining and dead code removal)
codegen-units = 1     # Reduces the number of codegen units to improve optimizations
strip = true          # Strip debug symbols to reduce binary size
debug = false         # Disable debug information in release mode
rpath = false         # Disable RPATH to reduce binary size (for dynamic libraries)

[dependencies]
p256 = "0.13.2"
